Fix Letter Spacing in Aside Section

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -10,8 +10,6 @@
 }
 
 .main-wrapper {
-  // width: 100vw;
-  // height: 100vh;
   width: 100%;
   height: 100%;
   display:flex;
@@ -23,21 +21,25 @@
 .aside-style {
     display: flex;
     position: relative;
-    // flex: 0 1 100%;
     flex: 0 1 20%;
     max-width: 200px;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
+}
+
+.aside-title {
+    position: relative;
 
     h1 {
       position: absolute;
-      transform: translateX(-80px)translateY(225px)rotate(270deg);
-      font-size: 5.5rem;
+      transform: translateX(-85px)translateY(-120px)rotate(270deg);
+      font-size: 6.5rem;
       font-family: 'Arial', sans-serif;
       font-weight: bold;
       text-transform: uppercase;
       color: #c9c9c9;
+      letter-spacing: -7.5px;
     }
 }
 
@@ -65,11 +67,9 @@
 .mount-node {
   display: flex;
   position: relative;
-  // flex: 0 1 100%;
   flex: 0 1 90%;
   align-items: center;
   justify-content: center;
-  // background-color: #ffffff;
 }
 
 .wrapper {
@@ -77,7 +77,6 @@
   position: relative;
   margin: 0;
   padding: 0;
-  // width: 100vw;
   flex: 0 1 100%;
   height: 100vh;
   font-size:16px;
